# plasma-snap-assistant

./: .SRCINFO  .gitignore  CONTRIBUTING.md  Makefile  PKGBUILD  README.md
.beads/: issues.jsonl
.beads/export-state/: 903c942e881a6083.json
kwin-effect-plasma-snap-assistant/: metadata.json
kwin-effect-plasma-snap-assistant/contents/config/: main.xml
kwin-effect-plasma-snap-assistant/contents/js/: eligibilityFilter.js  zoneCalculator.js
kwin-effect-plasma-snap-assistant/contents/ui/: main.qml
plasma-snap-assistant-tray/: CMakeLists.txt
plasma-snap-assistant-tray/config/: plasma-snap-assistantrc
plasma-snap-assistant-tray/resources/: plasma-snap-assistant-tray.desktop  plasma-snap-assistant-tray.notifyrc
plasma-snap-assistant-tray/src/: main.cpp
scripts/: install.sh
tests/: eligibilityFilter.test.js  validateMetadata.js  validateSources.js  zoneCalculator.test.js
